--- a/css/styles.css
+++ b/css/styles.css
@@ -103,10 +103,8 @@ img {
     letter-spacing: 0.02em;
     color: #2e2f42;
     padding-top: 24px;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    /*padding-bottom: 24px;*/
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding-bottom: 24px;
 }
 .menu-link:hover,
 .menu-link:focus {
@@ -120,19 +118,29 @@ img {
     font-style: normal;
     letter-spacing: 0.02em;
     color: #434455;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.top-contact-link {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .top-contact-link:hover,
 .top-contact-link:focus {
     color: #404bbf;
 }
+.under-line {
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
+    position: relative;
+    color: #404bbf;
+}
 .under-line::after {
     display: block;
-    content: "";
-    width: 48px;
+    position: absolute;
+    content: '';
+    width: 100%;
     height: 4px;
+    left: 0;
+    bottom: -1px;
     border-radius: 2px;
     background-color: #404bbf;
     margin-left: auto;
@@ -145,9 +153,22 @@ img {
     background: #404bbf;
 }
 .section-first {
-    background: #2e2f42;
-       /*padding: 188px 0;*/
-}
+    background-image:
+        linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+                url('../images/hero/people-office.jpg');
+    padding: 188px 0;
+    height: 600px;
+    max-width: 1140px;
+    margin: 0 auto;
+    padding: 0;
+    background-color: #2e2f42;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-origin: padding-box;
+    background-clip: padding-box;
+    }
 .heading-first {
     max-width: 496px;
     font-weight: 700;
@@ -159,11 +180,8 @@ img {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 48px;
+    padding-top: 188px;
 }
-/*.section-first-content-wrapper {
-    display: flex;
-    justify-content: center;
-}*/
 .order-service-btn {
     display: block;
     min-width: 169px;
@@ -178,9 +196,7 @@ img {
     border: none;
     margin-left: auto;
     margin-right: auto;
-    transition-property: background;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .order-service-btn:hover,
@@ -204,15 +220,21 @@ img {
     color: #2e2f42;
 }
 .benefits-title {
-    margin-top: 8px;
     margin-bottom: 8px;
 }
 .benefits-item {
     width: calc((100% - 72px)/4);
 }
-/*.benefit-icon {
-    border: 1px solid 8E8F99;
-}*/
+.container-benefit-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+}
 /*--------------------Team-----------------*/
 .paragraph-text {
     font-size: 16px;
@@ -233,7 +255,7 @@ img {
     margin-bottom: 72px;
 }
 .name-position {
-    padding: 32px 0 8px 0;
+    padding: 32px 0;
     /*display: flex;
     justify-content: center;*/
 }
@@ -243,6 +265,7 @@ img {
 }
 .text-position {
     text-align: center;
+    padding-bottom: 8px;
 }
 .list-team {
     display: flex;
@@ -252,8 +275,41 @@ img {
 .team-item {
     width: calc((100% - 72px)/4);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.social-list-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
 }
 
+.social-list-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-list-link:hover,
+.social-list-link:focus {
+    background-color: #404bbf;
+}
+.social-list-icon {
+    fill: #f4f4fd;
+}
+.social-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+    }
 /*--------------------Portfolio----------------*/
 .name-description {
     padding: 32px 16px;
@@ -265,6 +321,7 @@ img {
 }
 .portfolio-item {
     width: calc((100% - 48px)/3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .list-portfolio {
     display: flex;
@@ -272,7 +329,34 @@ img {
     row-gap: 48px;
     flex-wrap: wrap;
 }
-/*---------------Footer--------------*/
+.portfolio-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.portfolio-item:hover .text-image {
+    transform: translateY(0%);
+}
+.container-portfolio-image {
+    position: relative;
+    overflow: hidden;
+}
+.text-image {
+    position: absolute;
+    top: 0%;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+/*---------------Footer-------
+-------*/
 .page-footer {
     background: #2e2f42;
     padding: 100px 0;
@@ -301,50 +385,25 @@ img {
 .text-white-footer {
     color: #f4f4fd;
 }
-
-.background {
-    height: 600px;
-    width: 1140px;
-    margin: 0 auto;
-    padding: 0;
-    background-color: #2e2f42;
-    background-image: 
-    linear-gradient(
-        rgba(46, 47, 66, 0.7), 
-        rgba(46, 47, 66, 0.7)
-      ),
-      url('../images/hero/people-office.jpg');
-    background-repeat: no-repeat;
-    background-position: left top;
-    background-size: cover;
-    /*background-origin: padding-box;*/
-    background-clip: padding-box;
-}
-.social-list {
-    display: flex;
-    justify-content: center;
-    column-gap: 16px;
-    padding-bottom: 32px;
-}
 .text-links {
-   /* position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);*/
     font-weight: 500;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #f4f4fd;
+    color: #FFFFFF;
+    margin-bottom: 16px;
 }
-.social-list-link {
+.footer-container {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #4d5ae5;;
+    align-items: baseline;
+
+}
+.footer-logo {
+    margin-right: 120px;
+
+}
+.links {
+    gap: 16px;
 }
 
 
